[package]
name = "hyper-system-resolver"
version = "0.4.0"
description = "An advanced system resolver for use with hyper."
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MOZGIII/hyper-system-resolver"
keywords = ["hyper", "dns", "resolver", "getaddrinfo"]

[dependencies]
hyper = { version = "0.14", features = ["client", "tcp"] }
tokio = "1"
tracing = "0.1"
dns-lookup = "1"

[target."cfg(windows)".dependencies]
winapi = { version = "^0.3", default-features = false, features = ["ws2def"], optional = true }

[target."cfg(unix)".dependencies]
libc = { version = "^0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
hyper = { version = "0.14", features = ["http1"] }

[features]
default = ["addr-info-hints"]
addr-info-hints = ["libc", "winapi"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
