[package]
name = "hyper-system-resolver"
version = "0.6.0"
description = "An advanced system resolver for use with hyper & hyper-util."
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/MOZGIII/hyper-system-resolver"
keywords = ["hyper", "hyper-util", "dns", "resolver", "getaddrinfo"]

[dependencies]
hyper-util = { version = "0.1", features = ["client-legacy"] }
tower-service = "0.3"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
dns-lookup = "3"
derive_builder = { version = "0.20", optional = true }

[target."cfg(windows)".dependencies]
winapi = { version = "^0.3", default-features = false, features = ["ws2def"], optional = true }

[target."cfg(unix)".dependencies]
libc = { version = "^0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
hyper-util = { version = "0.1", features = ["http1"] }
hyper = "1"

[features]
default = ["addr-info-hints", "builder"]
addr-info-hints = ["libc", "winapi"]
builder = ["dep:derive_builder"]
